<resources>
    <string name="app_name">Sketches</string>
    <string name="app_name_long">Privacy Friendly Sketches</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>
    <string name="action_tutorial">Tutorial</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ###MAIN### -->
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue Game</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>

    <!--###HELP###-->
    <string name="help">Help</string>

    <string name="help_whatis">What is Privacy Friendly Sketching?</string>
    <string name="help_whatis_answer">Privacy Friendly Sketching is an app to create and manage simple drawings and sketches. In addition to that, it offers the possibility of renaming sketches, selecting various backgrounds and sharing the sketches with friends.</string>
    <string name="help_feature_one">How do I create a new sketch?</string>
    <string name="help_feature_one_answer">On the gallery screen you can tap on the + symbol on the bottom right corner to create a new sketch.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly App Example does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions requires the app?</string>
    <string name="help_permission_answer">Privacy Friendly App Example does not require any permission.</string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Jakob Nedlin, Enes Erdogan</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by the Karlsruhe Institute of Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-sketching">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>

    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Privacy Friendly Sketching is an app to create and manage simple paintings and sketches without the need of extra permissions.</string>

    <string name="slide2_heading">Gallery</string>
    <string name="slide2_text">The gallery displays an overview of existing sketches. Using the + symbol on the bottom right corner of the screen allows you to create a new sketch. A long touch over a preview allows you to delete an existing sketch.</string>

    <string name="slide3_heading">Editing a sketch</string>
    <string name="slide3_text">In addition to the editing tools on the bottom side of the screen you can select a background color or a background image.You can also share the current sketch with your friends. Have fun!</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_floating_button">Floating Button</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_activity_sketch">Sketch</string>
    <string name="action_sketch">Sketch</string>
    <string name="title_gallery_sketch">Gallery</string>

    <string name="keygen_infotext">Preparing Encryption and Database for first time use..</string>
    <string name="dialog_delete_message">Delete this sketch?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="keygen_progresstext">Generating passphrase..</string>
    <string name="keygen_progresstext_1">Passphrase Generated! Generating keys..</string>
    <string name="keygen_progresstext_2">Keys generated! Initializing database....</string>

    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="select_background">Select a background..</string>
    <string name="rename_sketch">Rename sketch..</string>
    <string name="export_sketch">Export sketch..</string>
    <string name="select_image">Select an image..</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="sketch_saved">Sketch saved!</string>
    <string name="permission_error">Permission error!</string>
    <string name="export_where">Where would you like to export to?</string>
    <string name="export_into_gallery">Export into gallery</string>
    <string name="export_into_external">Export into external storage</string>
    <string name="help_feature_two">How do i edit/delete a sketch?</string>
    <string name="help_feature_two_answer">On the gallery screen. you can tap on the preview of a sketch to edit an existing sketch. A long tap on the preview allows you to delete an existing sketch.</string>
    <string name="help_feature_three">How can I share a sketch?</string>
    <string name="help_feature_three_answer">While editing a sketch,you can tap the three dot button on the top right to share the current sketch.</string>
    <string name="help_feature_four">How do I name a sketch?</string>
    <string name="help_feature_four_answer">While editing a sketch, you can tap the three dot button on the top right, which will give you the possibility of renaming your sketch.</string>
    <string name="help_feature_five">How do I select another background?</string>
    <string name="help_feature_six">How do I export a sketch onto the device storage?</string>
    <string name="help_feature_six_answer">While editing a sketch, you can tap the three dot button on the top right, which will give you the possibility of exporting your sketch onto the device storage. However, exporting an image onto the device storage requires writing permission!</string>
    <string name="version_number">Version v%s</string>
    <string name="action_select_background">Select a background</string>
    <string name="action_rename_sketch">Rename Sketch</string>
    <string name="action_clear_background">Clear background</string>
    <string name="action_export_sketch">Export sketch</string>
    <string name="action_share_sketch">Share</string>
    <string name="help_feature_five_answer">While editing a sketch, you can tap the three dot button on the top right, which will give you the possibility of selecting another background.</string>


	<string name="dialog_goodbye_google_title">Goodbye Google Play 😢</string>
    <string name="dialog_goodbye_google_desc">Unfortunately, our apps have to say goodbye to Google Play. The app is still usable but will not receive any updates in the future.\nYou can find more information about the reasons why this is not the end of the Privacy Friendly Apps on our website:\n\n<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a>
    </string>
    <string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
</resources>
